--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@api/coingecko-sdk": "file:.api/apis/coingecko-sdk",
     "atom-node-logger": "^1.7.2",
     "ethers": "^6.13.0",
     "express": "^4.19.2",
