--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "sh ./scripts/build-script.sh",
     "dev": "ts-node-dev src/index.ts"
   },
   "devDependencies": {
