--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "target": "es6", // Set target JavaScript version
-    "module": "commonjs" // Set module system
+    "module": "commonjs", // Set module system
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"], // Include source files
   "exclude": ["node_modules", "dist"] // Exclude these directories from compilation
