--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "coin-gecko-sdk",
-  "version": "1.2.2",
+  "name": "coingecko-sdk",
+  "version": "1.0.0",
   "description": "Validating User Access Through Signature",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
