--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sh ./scripts/build-script.sh",
-    "dev": "sh ./scripts/refresh-sdk.sh && ts-node-dev src/index.ts"
+    "dev": "sh ./scripts/refresh-sdk.sh && ts-node-dev src/index.ts",
+    "dev-no-refresh": "ts-node-dev src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
