--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Expect
-        run: sudo apt-get install -y expect jq
+        run: sudo apt-get install -y expect
 
       - name: Use Node.js
         uses: actions/setup-node@v3
