--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coingecko-sdk",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "An interface to interact with the CoinGecko API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,7 +13,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "api": "^6.1.2",
+    "json-schema-to-ts": "^2.8.0-beta.0",
+    "oas": "^20.10.3"
   },
   "dependencies": {
     "@api/coingecko-sdk": "file:.api/apis/coingecko-sdk",
