--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,9 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Expect
-        run: sudo apt-get install -y expect
-
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -30,6 +27,9 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      - name: Install Dependencies
+        run: npm install
 
       - name: Build package
         run: npm run build
