--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "coingecko-sdk",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "An interface to interact with the CoinGecko API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sh ./scripts/build-script.sh",
-    "dev": "sh ./scripts/refresh-sdk.sh && ts-node-dev src/index.ts",
-    "dev-no-refresh": "ts-node-dev src/index.ts"
+    "build": "tsc",
+    "dev": "ts-node-dev src/index.ts",
+    "refresh": "sh ./scripts/refresh-sdk.sh"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
