--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coingecko-sdk",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "An interface to interact with the CoinGecko API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,16 +13,16 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
-    "api": "^6.1.2",
-    "json-schema-to-ts": "^2.8.0-beta.0",
-    "oas": "^20.10.3"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "atom-node-logger": "^1.7.2",
     "ethers": "^6.13.0",
     "express": "^4.19.2",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "api": "^6.1.2",
+    "json-schema-to-ts": "^2.8.0-beta.0",
+    "oas": "^20.10.3"
   },
   "author": "ali-hajeh",
   "license": "ISC"
