--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coingecko-sdk",
-  "version": "1.0.11",
+  "version": "1.1.0",
   "description": "An interface to interact with the CoinGecko API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,22 +8,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "ts-node-dev src/index.ts",
-    "refresh": "sh ./scripts/refresh-sdk.sh"
+    "openapi-ts": "openapi-ts",
+    "refresh": "rm -rf ./src/client && npx @hey-api/openapi-ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
+    "@hey-api/openapi-ts": "^0.52.9",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
-  "dependencies": {
-    "atom-node-logger": "^1.7.2",
-    "ethers": "^6.13.0",
-    "express": "^4.19.2",
-    "redis": "^4.6.14",
-    "api": "^6.1.2",
-    "json-schema-to-ts": "^2.8.0-beta.0",
-    "oas": "^20.10.3"
-  },
   "author": "ali-hajeh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@hey-api/client-fetch": "^0.2.4"
+  }
 }
